Post footer modification and a little intro on the homepage

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@ title: "Posts"
 ---
 
 <section class="content">
+  <h1>Welcome to my personal blog</h1>
+
+  <p>You'll find posts about various topics: team management, software development... Hope you'll enjoy the reading.</p>
+
   <ul class="listing">
     {% for post in site.posts %}
     <li>
