--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: "Posts"
   <ul class="listing">
     {% for post in site.posts %}
     <li>
-      <span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
+      <span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }} [{{ post.lang }}]</a>
     </li>
     {% endfor %}
   </ul>
