--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@ title: "About"
 
   <p>I love solving problems for end users, be they my clients or my coworkers.</p>
 
-  <p>You can see <a href="http://lnkd.in/9D7WSu">my resume on Linkedin</a></p>
+  <p>You can see <a href="https://lnkd.in/9D7WSu">my resume on Linkedin</a></p>
 
-  <p class="credits">This blog is powered by <a href="http://jekyllrb.com/">Jekyll</a> with minimalist theme <a href="https://github.com/holman/left">Left</a> borrowed from <a href="http://zachholman.com/">Zach Holmann</a>.</p>
+  <p class="credits">This blog is powered by <a href="http://jekyllrb.com/">Jekyll</a> with minimalist theme <a href="https://github.com/holman/left">Left</a> borrowed from <a href="https://zachholman.com/">Zach Holmann</a>.</p>
 </section>
